--- a/market/templates/product_full.html
+++ b/market/templates/product_full.html
@@ -10,13 +10,11 @@
 </head>
 <body>
     {% block content %}
-        {% for article in articles %}
             <div>
-                <h1><a href="{% url 'article_full' article.id %}">{{ article.name }}</a></h1>
-                <div><img src="{{ article.picture.url }}" height="150px" style="display: inline-block;"/></div>
-                <div style="display: inline-block;">{{ article.brief|safe }}</div>
+                <h1 class="product_name">{{ product.brand }} {{ product.model }}</h1>
+                <div><img src="../{{ product.picture.url }}" height="450px" style="display: inline-block;"/></div>
+                <div style="display: inline-block;">{{ product.description|safe }}</div>
             </div>
-        {% endfor %}
     {% endblock %}
 </body>
 </html>
