--- a/market/templates/article_full.html
+++ b/market/templates/article_full.html
@@ -1,14 +1,5 @@
-{% load static %}
+{% extends 'base.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'market/style.css' %}">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
-</head>
-<body>
     {% block content %}
             <div>
                 <h1>{{ article.name }}</h1>
@@ -25,5 +16,3 @@
                 </div>
             {% endfor %}
     {% endblock %}
-</body>
-</html>
