--- a/market/templates/home.html
+++ b/market/templates/home.html
@@ -10,4 +10,5 @@
         {% endfor %}
 
         <h1><a href="{% url 'catalogue_main' %}">Перейти в каталог товаров</a></h1>
+        <p style="font-size: 1em">{{ username }}</p>
     {% endblock %}
