--- a/market/templates/cart.html
+++ b/market/templates/cart.html
@@ -2,28 +2,14 @@
 
     {% block content %}
         <h1>Корзина</h1>
-        {% for product, quantity in cart_list %}
-            <h2>{{ product }} - {{ quantity }} шт.</h2>
-        {% endfor %}
-
 
         {% for product, quantity in cart_list %}
-            <form action="" method="post">
-            {% csrf_token %}
-                {{ form.product_id }}
-                {{ form.product }}
-                {{ form.quantity }}
-            <input type="submit" value="ОК">
-        </form>
-        {% endfor %}
-
-        {% for product, quantity in cart_list %}
-            <form action="" method="post">
+            <form action="" method="POST">
             {% csrf_token %}
                 <input type="hidden" name="product_id" value="{{ product.id }}">
                 <input type="text" name="product_name" value="{{ product.brand }} {{ product.model }}" disabled>
                 <input type="number" name="quantity" value="{{ quantity }}">
-                <input type="submit" value="ОК">
+                <input type="submit" value="Обновить">
         </form>
         {% endfor %}
 
