--- a/market/templates/cart.html
+++ b/market/templates/cart.html
@@ -2,6 +2,8 @@
 
     {% block content %}
         <h1>Корзина</h1>
+        <p>Проверьте выбранные товары. Если хотите изменить количество, то введите нужное значение и
+            нажмите "Обновить". Введите "0", если хотите удалить товар из корзины</p>
 
         {% for product, quantity in cart_list %}
             <form action="" method="POST">
