--- a/market/templates/logout.html
+++ b/market/templates/logout.html
@@ -1,13 +1,14 @@
-{% extends "base.html" %}
-{% load static %}
+{% extends 'base.html' %}
 
-{% block title %}Регистрация{% endblock %}
+{% block title %}Просто магазин{% endblock %}
 
 {% block content %}
+
     <div class="container">
         <div class="header"></div>
         <h2>Вы вышли из системы</h2>
         <p><a href="/">Вернуться на главную</a></p>
 
     </div>
+
 {% endblock %}
