--- a/market/templates/signup.html
+++ b/market/templates/signup.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
-{% load static %}
+{% extends 'base.html' %}
 
-{% block title %}Регистрация{% endblock %}
+{% block title %}Просто магазин{% endblock %}
 
 {% block content %}
+
     <div class="container">
         <div class="header"></div>
         <h2>Регистрация</h2>
@@ -19,4 +19,5 @@
         {{ result }}
         <p><a href="/">Вернуться на главную</a></p>
     </div>
+
 {% endblock %}
