--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -4,19 +4,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
     <link rel="stylesheet" type="text/css" href="{% static 'market/style.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Russo+One&display=swap" rel="stylesheet">
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
+    <div class="top_menu">
+        <div class="top_menu_left">
+            <a class="menu_button" href="{% url 'home' %}">Главная</a>
+            <a class="menu_button" href="{% url 'catalogue_main' %}">Каталог товаров</a>
+        </div><div class="top_menu_right">
+        {% if not auth %}
+            <a class="menu_button" href="{% url 'login' %}">Войти</a>
+            <a class="menu_button" href="{% url 'signup' %}">Зарегистрироваться</a>
+        {% endif %}
+        {% if auth %}
+            <p style="font-size: 1em; display: inline-block; color: white; margin: 0 20px 0 20px;">{{ username }}</p>
+        {% endif %}
+            <a class="menu_button" href="{% url 'cart' %}">Корзина</a>
+        {% if auth %}
+            <a class="menu_button" href="{% url 'logout' %}">Выйти</a>
+        {% endif %}
+        </div>
+    </div>
+    <div class="content">
+        {% block content %}
+        {% endblock %}
+    </div>
     <div class="footer">
-        <a href="{% url 'login' %}">Логин</a> &lt;&lt;&gt;&gt;&nbsp;
-        <a href="{% url 'signup' %}">Зарегистрироваться</a> &lt;&lt;&gt;&gt;&nbsp;
-        <a href="{% url 'logout' %}">Выйти</a> &lt;&lt;&gt;&gt;&nbsp;
-        <a href="{% url 'home' %}">Домой</a> &lt;&lt;&gt;&gt;&nbsp;
-        <a href="{% url 'cart' %}">Корзина</a>
+        &nbsp;
     </div>
 </body>
 </html>
