--- a/market/templates/login.html
+++ b/market/templates/login.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
-{% load static %}
+{% extends 'base.html' %}
 
-{% block title %}Регистрация{% endblock %}
+{% block title %}Просто магазин{% endblock %}
 
 {% block content %}
+
     <div class="container">
         <div class="header"></div>
         <h2>Вход в систему</h2>
@@ -19,6 +19,6 @@
 
         <p>{{ result }}</p>
         <p><a href="/">Вернуться на главную</a></p>
-
     </div>
+
 {% endblock %}
