--- a/market/templates/login.html
+++ b/market/templates/login.html
@@ -3,9 +3,8 @@
 {% block title %}Просто магазин{% endblock %}
 
 {% block content %}
-
-    <div class="container">
-        <div class="header"></div>
+<div style="text-align: center">
+    <div class="small_form">
         <h2>Вход в систему</h2>
         <form action="/login/" method="post">
             {% csrf_token %}
@@ -14,11 +13,11 @@
                 {{ field.errors }}
             {% endfor %}
 
-            <input type="submit" value="Submit">
+            <p style="text-align: center"><input type="submit" value="Войти" class="add_to_cart"></p>
         </form>
 
         <p>{{ result }}</p>
         <p><a href="/">Вернуться на главную</a></p>
     </div>
-
+</div>
 {% endblock %}
